ci: use compile mode for researching github action

--- a/.github/workflows/research.yml
+++ b/.github/workflows/research.yml
@@ -14,5 +14,5 @@ jobs:
           git config user.email github-actions@github.com
       - uses: dloez/tag-track@github-action-research
         with:
-          compile: false
+          compile: true
           useCache: true
