--- a/action.yml
+++ b/action.yml
@@ -66,7 +66,7 @@ runs:
       if: ${{ inputs.compile == 'true' && inputs.useCache == 'true' }}
       id: gen-compile-cache-key
       shell: bash
-      run: echo "compile-cache-key=tag_track-compile-${{ hashFiles('tag-track-repo/**/*.rs', 'tag-track-repo/.cargo/**', 'tag-track-repo/Cargo*') }}" >> $GITHUB_OUTPUT
+      run: echo "compile-cache-key=tag-track_compile_${RUNNER_OS}_${RUNNER_ARCH}_${{ hashFiles('tag-track-repo/**/*.rs', 'tag-track-repo/.cargo/**', 'tag-track-repo/Cargo*') }}" >> $GITHUB_OUTPUT
     - name: Restore compile cache
       if: ${{ inputs.compile == 'true' && inputs.useCache == 'true' }}
       id: compile-cache-restore
@@ -98,7 +98,7 @@ runs:
       if: ${{ inputs.compile == 'false' && inputs.useCache == 'true' }}
       id: gen-download-cache-key
       shell: bash
-      run: echo "download-cache-key=tag_track-download-${{ steps.action-ref-generator.outputs.action-ref }}" >> $GITHUB_OUTPUT
+      run: echo "download-cache-key=tag-track_download_${RUNNER_OS}_${RUNNER_ARCH}_${{ steps.action-ref-generator.outputs.action-ref }}" >> $GITHUB_OUTPUT
     - name: Restore download cache
       if: ${{ inputs.compile == 'false' && inputs.useCache == 'true' }}
       id: download-cache-restore
@@ -165,5 +165,4 @@ runs:
     - name: Push tag
       shell: bash
       if: ${{ steps.tag-track-runner.outputs.created-tag && inputs.push-tag }}
-      run: |
-        git push origin --tags
+      run: git push origin --tags
