ci: change to windows runner

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: Tag Track
-description: Calculate semantic version bump based on conventional commits
+description: Calculate semantic version bump based on conventional commits.
 author: David Lopez <davidlopez.hellin@outlook.com>
 inputs:
   create-tag:
