--- a/.github/workflows/research.yml
+++ b/.github/workflows/research.yml
@@ -5,7 +5,7 @@ on:
       - github-action-research
 jobs:
   research:
-    runs-on: macos-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
       - name: Configure git author
