feat: reduce compile cache keys

--- a/action.yml
+++ b/action.yml
@@ -74,7 +74,9 @@ runs:
       if: ${{ inputs.compile == 'true' && inputs.useCache == 'true' }}
       id: gen-compile-cache-key
       shell: bash
-      run: echo "compile-cache-key=tag-track_compile_${RUNNER_OS}_${RUNNER_ARCH}_${{ hashFiles('tag-track-repo/**/*.rs', 'tag-track-repo/.cargo/**', 'tag-track-repo/Cargo*') }}" >> $GITHUB_OUTPUT
+      run: |
+        hash_string=${{ hashFiles('tag-track-repo/**/*.rs', 'tag-track-repo/.cargo/**', 'tag-track-repo/Cargo*') }}
+        echo "compile-cache-key=tag-track_compile_${RUNNER_OS}_${RUNNER_ARCH}_${hash_string:0:8}" >> $GITHUB_OUTPUT
     - name: Restore compile cache
       if: ${{ inputs.compile == 'true' && inputs.useCache == 'true' }}
       id: compile-cache-restore
