--- a/.github/workflows/research.yml
+++ b/.github/workflows/research.yml
@@ -10,10 +10,14 @@ jobs:
       - uses: actions/checkout@v4
       - name: Configure git author
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name example
+          git config user.email example
       - uses: dloez/tag-track@github-action-research
         with:
           compile: true
-          useCache: true
+          use-cache: true
           create-tag: true
+      - name: Check git author
+        run: |
+          echo "::debug::Git author name: $(git config user.name)"
+          echo "::debug::Git author email: $(git config user.email)"
