--- a/.github/workflows/tag_release.yml
+++ b/.github/workflows/tag_release.yml
@@ -7,50 +7,37 @@ jobs:
   call-build_lint:
     uses: ./.github/workflows/build_lint_test.yml
     secrets: inherit
-  create_tag:
+  create-tag:
     runs-on: ubuntu-latest
     needs: call-build_lint
     permissions:
       contents: write
     outputs:
-      created_tag: ${{ steps.tag-track.outputs.created_tag }}
-      new_version: ${{ steps.tag-track.outputs.new_version }}
+      tag-created: ${{ steps.tag-track.outputs.tag-created }}
+      new-tag: ${{ steps.tag-track.outputs.new-tag }}
+      new-version: ${{ steps.tag-track.outputs.new-version }}
     steps:
       - uses: actions/checkout@v3
-      - name: Configure git author
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-      - name: Setup rust toolchain
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: 1.71.0
-          targets: ${{ matrix.os-target.target }}
-      - uses: Swatinem/rust-cache@v2
-      - name: Run trag-track
+      - name: Run Tag Track
         id: tag-track
-        run: |
-          exec 5>&1
-          output=$(cargo run -- --create-tag --github-repo dloez/tag-track --github-token ${{ github.token }} --output-format json | tee >(cat - >&5))
-          echo "created_tag=$(echo $output | jq -r '.created_tag')" >> $GITHUB_OUTPUT
-          echo "new_version=$(echo $output | jq -r '.new_version')" >> $GITHUB_OUTPUT
-      - name: Output from tag-track
-        run: |
-          echo ${{ steps.tag-track.outputs.created_tag }}
-          echo ${{ steps.tag-track.outputs.new_version }}
-      - name: Push tags
-        run: git push origin --tags
+        uses: ./
+        with:
+          create-tag: true
+          push-tag: true
+          github-token: ${{ github.token }}
+          compile: true
+          use-cache: true
   release:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    needs: create_tag
-    if: ${{ needs.create_tag.outputs.created_tag == 'true' }}
+    needs: create-tag
+    if: ${{ needs.create-tag.outputs.tag-created == 'true' }}
     steps:
       - uses: actions/checkout@v3
       - name: Generate release notes
         run: |
-          sed 's/{version}/${{ needs.create_tag.outputs.new_version }}/g' ${{ github.workspace }}/.github/release_notes.template \
+          sed 's/{version}/${{ needs.create-tag.outputs.new-version }}/g' ${{ github.workspace }}/.github/release_notes.template \
           > ${{ github.workspace }}/.github/release_notes.txt
       - name: Create release
         uses: softprops/action-gh-release@v1
@@ -59,13 +46,13 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           generate_release_notes: true
-          name: Tag Track - ${{ needs.create_tag.outputs.new_version }}
-          tag_name: ${{ needs.create_tag.outputs.new_version }}
+          name: Tag Track - ${{ needs.create-tag.outputs.new-version }}
+          tag_name: ${{ needs.create-tag.outputs.new-tag }}
           body_path: ${{ github.workspace }}/.github/release_notes.txt
           target_commitish: ${{ github.base_ref }}
           prerelease: true
   upload-to-release:
-    needs: [create_tag, release]
+    needs: [create-tag, release]
     permissions:
       contents: write
     strategy:
@@ -86,7 +73,7 @@ jobs:
         run: |
           mv ${{ github.workspace }}/target/${{ matrix.target }}/release/tag-track${{ matrix.target == 'x86_64-pc-windows-msvc' && '.exe' || '' }} \
           tag-track_${{ matrix.target }}${{ matrix.target == 'x86_64-pc-windows-msvc' && '.exe' || '' }}
-          gh release upload ${{ needs.create_tag.outputs.new_version }} \
+          gh release upload ${{ needs.create-tag.outputs.new-version }} \
           tag-track_${{ matrix.target }}${{ matrix.target == 'x86_64-pc-windows-msvc' && '.exe' || '' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
